# wenyoo

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  config.example.yaml  main.py  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  ai-native-editor-design.md  basic-features.md  configuration.md  getting-started.md  playing-stories.md  troubleshooting.md  writing-stories.md
docs/contributing/: architect-design.md  architect-task-purpose.md  client-context-design.md  custom-frontend-purpose.md  developer-guide.md  test-coverage-baseline.md  test-harness-rollout.md
docs/editor/: README.md  getting-started.md  reference.md  workflows.md
docs/zh-CN/: README.md  basic-features.md  configuration.md  getting-started.md  playing-stories.md  troubleshooting.md  writing-stories.md
editor/: README.md  eslint.config.js  index.html  package-lock.json  package.json
editor/src/: App.css  App.jsx  editor-panels.css  main.jsx
prompts/: README.md  action_parser_prompt.txt  architect_system.txt  dialogue_prompt.txt  generate_character.txt  generate_node.txt  generate_object.txt  help_prompt.txt  intent_parser_prompt.txt  node_format_description.md  story_format_description.md  system_prompt.txt
scripts/: run-linux.sh  run-windows.ps1  wenyoo_launcher.py
skills/create-story/: SKILL.md  story-patterns.md  validation-checklist.md
src/: __init__.py  config.py  main.py
src/adapters/: __init__.py  base.py  base_llm_adapter.py  claude_adapter.py  mock_llm_adapter.py  ollama_adapter.py  web_frontend_adapter.py  websocket_manager.py
src/core/: __init__.py  architect.py  background_materialization.py  game_kernel.py  input_parser.py  interfaces.py  lua_runtime.py  node_generator.py  persistent_session_store.py  state_context_builder.py  state_manager.py  status_display_resolver.py  story_manager.py  text_processor.py  (+2 more)
static/: editor.html  index.html
stories/: example.yaml  example_chinese.yaml  form_demo.yaml  form_demo_chinese.yaml  multiplayer_coop_demo.yaml
tests/: conftest.py
tools/: compile_connections.py  copy-build-files.js  parse_log.py
(+156 files in other folders)
