[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wenyoo"
version = "0.7.0"
description = "Wenyoo"
requires-python = ">=3.10"
dynamic = ["readme", "dependencies"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment",
]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"            # @pytest.mark.asyncio not required on every async test
testpaths = ["tests"]
addopts = [
    "-ra",                       # short summary for skip/xfail/fail
    "--strict-markers",
    "--strict-config",
    "-p", "no:cacheprovider",    # keep CI workspace clean
]
filterwarnings = [
    "default",                   # report deprecations without failing (see rollout plan §5.3).
                                 # Escalate to "error::DeprecationWarning" once green and all
                                 # remaining warnings originate from src/.
]
